--- a/data/middleeast_countries.json
+++ b/data/middleeast_countries.json
@@ -6,9 +6,10 @@
 		"maxLat": 55
 	},
 	"center": {
-		"lat": 30,
-		"lon": 45
+		"lat": 32,
+		"lon": 50
 	},
+	"zoom": 1.07,
 	"countries": [
 		"turkey",
 		"iran",
