--- a/data/settings.json
+++ b/data/settings.json
@@ -13,5 +13,20 @@
         "strokeColor": "rgba(255, 255, 255, 1)",
         "sideColor":   "rgba(0, 100, 200, 0.15)"
     },
-    "backgroundColor": "rgba(15, 23, 42, 1)"
+    "backgroundColor": "rgba(15, 23, 42, 1)",
+    "altitudes": {
+        "normal": 0.01,
+        "selected": 0.05,
+        "answered": 0.01,
+        "capitalOffset": 0.01
+    },
+    "capitalColors": {
+        "normal": "rgba(255, 255, 255, 0.9)",
+        "correct": "rgba(22, 163, 74, 0.9)",
+        "wrong": "rgba(185, 28, 28, 0.9)"
+    },
+    "countryQuizColors": {
+        "correct": "rgba(34, 197, 94, 0.7)",
+        "wrong": "rgba(239, 68, 68, 0.7)"
+    }
 }
